[gd_scene load_steps=5 format=1]

[ext_resource path="res://menu/score_panel.gd" type="Script" id=1]
[ext_resource path="res://menu/overpanel.png" type="Texture" id=2]
[ext_resource path="res://font/GameTitle.fnt" type="BitmapFont" id=3]
[ext_resource path="res://menu/start-button.png" type="Texture" id=4]

[node name="ScorePanel" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ScorePanelBG" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = 8.0
margin/right = 576.0
margin/bottom = 397.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Panel" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 234.0
margin/top = 78.0
margin/right = 492.0
margin/bottom = 354.0
alignment = 1

[node name="Score" type="HBoxContainer" parent="Panel"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 29.0
margin/right = 258.0
margin/bottom = 84.0
alignment = 1

[node name="lblScore" type="Label" parent="Panel/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 34.0
margin/top = 0.0
margin/right = 185.0
margin/bottom = 55.0
custom_fonts/font = ExtResource( 3 )
text = "Score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblDynamicScore" type="Label" parent="Panel/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 189.0
margin/top = 0.0
margin/right = 223.0
margin/bottom = 55.0
custom_fonts/font = ExtResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BestScore" type="HBoxContainer" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 88.0
margin/right = 258.0
margin/bottom = 143.0
alignment = 1

[node name="lblBestScore" type="Label" parent="Panel/BestScore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 0.0
margin/right = 169.0
margin/bottom = 55.0
custom_fonts/font = ExtResource( 3 )
text = "Best:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lblDynamicBestScore" type="Label" parent="Panel/BestScore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 173.0
margin/top = 0.0
margin/right = 207.0
margin/bottom = 55.0
custom_fonts/font = ExtResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ReplayButton" type="HBoxContainer" parent="Panel"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 147.0
margin/right = 258.0
margin/bottom = 247.0
alignment = 1

[node name="btnReplay" type="TextureButton" parent="Panel/ReplayButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 49.0
margin/top = 0.0
margin/right = 208.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )

[connection signal="pressed" from="Panel/ReplayButton/btnReplay" to="." method="_on_btnReplay_pressed"]


